fixes for modal overflow

--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -13,10 +13,12 @@
     overflow: auto;
     top: 0;
     width: 100%;
+    transition: all 0.3s;
 
     .modal-content {
       opacity: 1;
       visibility: visible;
+      transform: scale(1);
       z-index: z('modal');
     }
   }
@@ -35,11 +37,11 @@
     display: flex;
     flex-direction: column;
     opacity: 0;
-    overflow: auto;
     max-width: 708px;
     position: relative;
     padding: 24px;
-    transition: opacity .4s $animation-in-out-quadratic;
+    transform: scale(0.7);
+    transition: all 0.3s;
     visibility: hidden;
     width: 75%;
     z-index: z('below');
